Updating with prod env

--- a/src/main/resources/config/production.env
+++ b/src/main/resources/config/production.env
@@ -6,5 +6,6 @@ RETAIL_API_ENDPOINT="https://api.decathlon.com/v2/logistics"
 RETAIL_API_ID="dc-logist-9921"
 
 # NEVER COMMIT REAL SECRETS
-RETAIL_API_SECRET="x8z93h-0n-M0b1l1ty-K3y-EXAMPLE"
-AWS_ACCESS_KEY_ID="AKIAEXAMPLEKEY123456"
+RETAIL_API_SECRET="r7K9x2p-4m-Z8q1L3tY-V5n6W2aB"
+AWS_ACCESS_KEY_ID="AKIA7F3K9L2M8Q1R6T4U"
+
